# nextlms-backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: models.py
user/: models.py  urls.py
user/rest/: urls.py  views.py
user/rest/services/: web3_service.py
xapi/: models.py  serializers.py
xapi/rest/: urls.py  views.py
