[project]
name = "nextlms-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ISSSSA",email = "52818700+ISSSSA@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9, <4"
dependencies = [
    "web3 (>=7.12.0,<8.0.0)",
    "django (==4.2)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
