[project]
name = "nextlms-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ISSSSA",email = "52818700+ISSSSA@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9, <4"
dependencies = [
    "web3 (>=7.12.0,<8.0.0)",
    "django (==4.2)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "ruff (>=0.12.1,<0.13.0)",
    "mypy (>=1.16.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["migrations/", "settings.py"]
